ui-seed-2/k8s/virtual-service-prod.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: ui-seed-extbo
spec:
  hosts:
  - ""
  gateways:
  - instant-payments-gateway
  http:
  - match:
    - uri:
       prefix: "/seed/"
    rewrite:
      uri: /
    route:
    - destination:
        host: ui-seed-extbo
        port:
          number: 80
